--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+
     <style>
         body {
             font-family: "Open Sans", sans-serif;
@@ -402,6 +405,22 @@
                             <option value="week">Week</option>
                             <option value="month">Month</option>
                         </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">App Categories</label>
+                        <div id="categoriesList" class="mb-2">
+                            <!-- Categories will be dynamically populated here -->
+                        </div>
+                        <button id="addCategoryBtn" class="btn btn-sm btn-outline-primary">
+                            <i class="fas fa-plus"></i> Add Category
+                        </button>
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">App Classifications</label>
+                        <div id="appClassificationsList" class="list-group mb-2">
+                            <!-- App classifications will be dynamically populated here -->
+                        </div>
                     </div>
                     <button id="saveSettingsBtn" class="btn btn-primary btn-sm">Save Settings</button>
                 </div>
